--- a/StopNShop2/appsettings.json
+++ b/StopNShop2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-MOSJEFP\\SQLEXPRESS;Database=aspnet-StopNShop2-EE79ECC0-EEAF-4D53-8309-2E3F3C267797;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StopNShop2-EE79ECC0-EEAF-4D53-8309-2E3F3C267797;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
