--- a/StopNShop2/StopNShop2.csproj
+++ b/StopNShop2/StopNShop2.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <Folder Include="bin\Debug\" />
     <Folder Include="Migrations\" />
+    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
