--- a/StopNShop2/StopNShop2.csproj
+++ b/StopNShop2/StopNShop2.csproj
@@ -21,7 +21,11 @@
   <ItemGroup>
     <Folder Include="bin\Debug\" />
     <Folder Include="Migrations\" />
-    <Folder Include="Images\" />
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\freeshippingtruck.png" />
   </ItemGroup>
 
 </Project>
