appsetting.json changed

--- a/StopNShop2/appsettings.json
+++ b/StopNShop2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-StopNShop2-EE79ECC0-EEAF-4D53-8309-2E3F3C267797;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:stopnshopserver2.database.windows.net,1433;Initial Catalog=StopNShopDB;Persist Security Info=False;User ID=StopNShopSA;Password=Password$@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
